# recvmail

./: .gitignore  AUTHORS  Dovecot.md  Makefile  Makefile.am  Postfix.md  ProjectHome.md  README  address.c  address.h  aliases.h  atomic.c  config.mk  configure  configure.ac  configure.in  dnsbl.c  dnsbl.h  domain.c  epoll.c  epoll.h  event.h  file.c  fsyncer.c  hash.h  log.h  maildir.c  maildir.h  main.c  mda.c  message.c  message.h  poll.c  poll.h  queue.h  rc.FreeBSD  recvmail.c  recvmail.h  resolver.c  resolver.h  (+13 more)
2009_02_15_event_driven_model/: message.h  poll.c  poll.h  session.c  thread-pool.c  thread-pool.h
branches/event_driven_model/: Makefile.am  README  aliases.c  aliases.h  configure.in  dnsbl.c  dnsbl.h  epoll.c  event.h  fsyncer.c  hash.h  log.h  maildir.c  main.c  mda.c  mda.h  message.c  message.h  options.h  poll.c  poll.h  queue.h  server.c  server.h  session.c  session.h  smtp.c  smtp.h  socket.c  test.expect  workqueue.c  workqueue.h
branches/libdispatch/doc/: Makefile  auth.txt
branches/libdispatch/src/: Makefile.am  address.h  configure.in  maildir.h  mda.c  message.c  message.h  poll.c  poll.h  privsep.c  privsep.h  protocol.h  recipient.c  recipient.h  resolver.c  resolver.h  server.c  session.h  smtp.c  socket.h  workqueue.h
branches/libdispatch/test/: test.pl
branches/libdispatch/www/: logo.xcf
branches/revert_to_1.2/: ChangeLog  Makefile.am  README  address.c  file.c  recvmail.8
branches/thread_per_client/: Makefile.am  atomic.h  log.c  log.h  message.h  session.h  smtp.h
contrib/libspf2-1.2.9/src/include/: spf_lib_version.h
doc/: hier.dot  src.dot
libevent/: config.h.in  configure
libevent/sample/: Makefile.in
libevent/test/: Makefile.in  regress.gen.c  regress.gen.h
src/: Makefile  Makefile.am  address.c  dnsbl.c  dnsbl.h  epoll.c  hash.h  log.c  log.h  maildir.c  main.c  message.c  message.h  options.h  poll.c  poll.h  privsep.c  privsep.h  recipient.c  recipient.h  recvmail.8  recvmail.h  resolver.c  resolver.h  server.c  server.h  session.c  session.h  smtp.c  socket.c  socket.h  throttle.c  tls.h  util.c  util.h  workqueue.c
tags/1.2/: COPYING  ChangeLog  recvmail.h  smtp.c
tags/2.0/src/: Makefile.am  configure.in  main.c  mda.c  message.h  recvmail.8  resolver.c  server.h  session.c  smtp.c  throttle.c
tags/2.0/www/: download.php
tags/2.1.1/src/: ChangeLog  configure  configure.in  recvmail.8
tags/2.1.1/www/: header.html
tags/2.1.2/doc/: src.dot
tags/2.1.2/src/: ChangeLog  server.c  server.h
tags/2.1.2/trunk/src/: mda.h  resolver.c
tags/2.1.2/trunk/www/: config.php
tags/2.1/src/: Makefile  Makefile.am  configure.in  server.c  workqueue.h
tags/2.1/www/: footer.html
test/: basic.pl  test.pl
trunk/: Makefile  Makefile.am  README  TODO  address.c  address.h  aliases.c  configure.in  dnsbl.c  dnsbl.h  epoll.c  epoll.h  file.c  hash.h  log.c  log.h  maildir.c  maildir.h  main.c  mda.h  message.c  message.h  nbuf.h  options.h  poll.c  poll.h  pop3.c  queue.h  recvmail.c  recvmail.h  resolver.c  selftest.c  server.c  server.h  session.c  session.h  smtp.c  smtp.h  socket.c  socket.h  (+7 more)
trunk/contrib/: libspf
trunk/contrib/libspf2-1.2.9/perl/: META.yml
trunk/doc/: Makefile  queue.txt
trunk/libevent/: Makefile.in  event-config.h
trunk/src/: Makefile  Makefile.am  address.c  address.h  configure  configure.in  dnsbl.c  dnsbl.h  epoll.h  hash.h  log.c  maildir.c  maildir.h  main.c  mda.c  message.c  message.h  options.h  poll.c  poll.h  protocol.h  recipient.c  recipient.h  recvmail.h  resolver.c  resolver.h  selftest.c  server.c  server.h  session.c  session.h  smtp.c  smtp.h  socket.c  socket.h  throttle.c  throttle.h  tls.c  util.c  util.h  (+1 more)
trunk/test/: test.expect
trunk/www/: config.php  default.css  download.php  features.php  header.html  install.php  license.php
wiki/: Dovecot.wiki  Postfix.wiki
www/: footer.html  header.html  index.php  install.php  license.php
